[package]
name = "ndebele-pl"
version = "0.1.0"
edition = "2024"
description = "The Ndebele programming language interpreter"
license = "MIT"
repository = "https://github.com/your-username/ndebele-pl"
keywords = ["language", "interpreter", "ndebele"]
categories = ["command-line-utilities"]

[[bin]]
name = "ndebele-pl"
path = "src/main.rs"

[dependencies]
