[package]
name = "qho"
version = "0.1.0"
edition = "2024"
description = "The Ndebele programming language interpreter"
license = "MIT"
repository = "https://github.com/mtnyoni/qho"
keywords = ["language", "interpreter", "ndebele"]
categories = ["command-line-utilities"]

[[bin]]
name = "qho"
path = "src/main.rs"

[dependencies]
